=== 0.8.0
* Filters V3
* separate custom_filters from filters
* added Lobbyist::V2::CustomFilter
* added Customer Segmentation resource

=== 0.7.86
* added Retry request if connection fails

=== 0.7.85
* added new resource V2::ZippedImageUpload

=== 0.7.84
* added attribute in Tag.

=== 0.7.82
* added image_urls to v2/category_default_front_templates API

=== 0.7.81
* added image_urls to v2/front_templates API

=== 0.7.80
* added CategoryDefaultFrontTemplate communication_campaigns API.

=== 0.7.79
* added Tag destroy API.

=== 0.7.78
* added CategoryDefaultFrontTemplate.

=== 0.7.77
* added Tag and added attributes in category and front template.

=== 0.7.76
* added campaign algo_metadata field instead of all its keys for communication campaign.

=== 0.7.75
* added campaign algo_metadata fields in attr_accessor list for communication campaign.

=== 0.7.74
* added reset branding campaign end point V2::CommunicationCampaign.

=== 0.7.73
* added create branding campaign end point V2::CommunicationCampaign.

=== 0.7.71
* added clone_campaign end point V2::CommunicationCampaign.

=== 0.7.70
* adding new resource V2::SupportedCampaigns

=== 0.7.69
* update the sum method on collection to convert string to float instead on string to int, to not loose the fractions

=== 0.7.68
* adding filter_changeable to campaign

=== 0.7.67
* adding status description to campaign

=== 0.7.66
* adding X-Request-Id header to be passed with all requests.

=== 0.7.65
* added endpoint for receipt.

=== 0.7.64
* using recommended_credits instead of budget

=== 0.7.63
* added approved to V2::GlobalCampaignSetting

=== 0.7.61
* update charge end point to take credits for a campaign and follow the convention of lobbyist

=== 0.7.60
* added option to send additional params to end point POST(purchase_campaign_credits) to V2::Company

=== 0.7.59
* added balance_payable to V2::CampaignsCreditSummary

=== 0.7.58
* added end point POST(purchase_campaign_credits) to V2::Company

=== 0.7.57